Resolves: tdf#95629 import also 0x0D as rich EditCell, not only 0x0A

Change-Id: I58d9d7dcbcd1e6cf5ae51532982d7d3525038984